# Sedimark-Toolbox

./: README.md
dp_ai_pipeline_orchestration_deployment/: MLflow  MageAI  README.md  docker-compose.yaml  requirements.txt
dp_ai_pipeline_orchestration_deployment/envs/: mage.env  mageapi.env  mflowapi.env  minio.env  mlflow.env  mlflowapi.env  orchestrator.env  postgres.env
dp_ai_pipeline_orchestration_deployment/mage/: metadata.yaml
dp_ai_pipeline_orchestration_deployment/mlflow_api/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
dp_ai_pipeline_orchestration_deployment/mlflow_api/.github/workflows/: build_push_docker_image.yaml
dp_ai_pipeline_orchestration_deployment/mlflow_api/src/mlflow_api/: main.py  mlflow_client.py  models.py  schemas.py
ngsild_broker_deployment/: .env  .gitignore  README.md  docker-compose.yml
ngsild_broker_deployment/kubernetes/: 000-stellio-namespace.yaml  005-stellio-kafka-pvc.yaml  005-stellio-postgres-pvc.yaml  010-stellio-configmap.yaml  010-stellio-kafka-configmap.yaml  010-stellio-postgres-configmap.yaml  015-stellio-postgres-secret.yaml  020-stellio-api-deployment.yaml  020-stellio-kafka-deployment.yaml  020-stellio-postgres-deployment.yaml  020-stellio-search-deployment.yaml  020-stellio-sub-deployment.yaml  025-stellio-api-svc.yaml  025-stellio-kafka-svc.yaml  025-stellio-postgres-svc.yaml  025-stellio-search-svc.yaml  025-stellio-sub-svc.yaml
toolbox_deployment/: .env  MLflow  MinioInit  README.md  docker-compose.yaml  init.sh
toolbox_deployment/default_repo/: broker.csv  (+1 more)
(+44 files in other folders)
